some final changes